# remote_watcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: blob.tgz  controller.rc  monitor.rc  resource.h  rgmsvc.rc
cmake/: common.cmake
docs/: code_flow.md  compress.md  dll_service.md  threading_pool.md
include/: assets.h  comm.hpp  common.hpp  common_assets.h  common_dep.h  common_utils.hpp  dep.h
src/controller/: ctrl_dep.h  ctrl_main.cc  ctrl_main_dlg.h  ctrl_process.cc  ctrl_process.h  ctrl_setup.cc  ctrl_setup.h  ctrl_tar.cc  ctrl_util.cc  ctrl_utils.cc  ctrl_utils.h  ctrl_win32_dep.h  main.cc  maindlg.h  setup.cc  setup.h  tar.cc  wdep.h  win32_dep.h
src/service/: CMakeLists.txt  entry.cc  main.cc  nats_client.cc  nats_client.h  sdep.h  service.h  service_async.hpp  service_dep.h  service_entry.cc  service_extern.h  service_impl.cc  service_main.cc  service_nats_client.cc  service_nats_client.h  service_process.cc  service_process.h  service_thread.cc  service_thread_nats.cc  service_thread_nats.h  service_thread_timer.cc  service_thread_timer.h  service_thread_worker.cc  service_thread_worker.h  service_utils.cc  service_utils.h  service_utils_ex.cc  service_utils_ex.h  service_watch.cc  service_watch.h  service_watch_ex.cc  service_watch_ex.h  service_watch_tree.cc  service_watch_tree.h  utils.cc  utils.h  watch.cc
test/: CMakeLists.txt  controller-utils.test.cc  service-utils.test.cc  service-zlib.test.cc
tools/: CMakeLists.txt  readme.md
